--- a/styles.css
+++ b/styles.css
@@ -468,11 +468,10 @@ px solid currentColor;
 
     /* Header */
         .main-header {
-            display: flex;
-            margin: 0 auto;
-            width: 90%;
+             display: flex;
+            width: 100%;
             justify-content: center;
-            padding: 20px;
+            padding: 15px 0px;
             background: linear-gradient(to bottom, rgba(26,26,26,1) 90%, rgba(102,0,0,1));
             position: sticky;
             top: 0;
