--- a/styles.css
+++ b/styles.css
@@ -429,10 +429,6 @@ px solid currentColor;
         padding: 0;
     }
 
-    section {
-        padding-bottom: 50px;
-    }
-
     h1 {
         font-size: 2.5rem;
         text-align: center;
@@ -441,7 +437,6 @@ px solid currentColor;
     }
 
     .container {
-        max-width: 1000px;
         margin: 0 auto;
     }
 
@@ -800,6 +795,7 @@ px solid currentColor;
 /* Footer */
 footer {
 background-color: var(--black-bg);
+padding: 20px;
 }
 
 .footerContainer {
