--- a/styles.css
+++ b/styles.css
@@ -437,7 +437,9 @@ px solid currentColor;
     }
 
     .container {
-        margin: 0 auto;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
     }
 
     /* Section related */
