--- a/styles.css
+++ b/styles.css
@@ -482,6 +482,7 @@ td.checkmark {
   justify-content: center;
   display: flex;
   flex-direction: column;
+margin: 0 auto;
     }
 
     /* Section related */
