--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,8 @@ nav a:hover {
     color: #000;
     position: absolute;
     right: 15px;
+    text-decoration: none;
+}
 }
 
 .btn-secondary:hover {
